syntax = "proto3";

package weatherParse;
//  protoc -I . weather.proto --go_out=plugins=grpc:.
service weatherParser {
  rpc getWeather (WeatherParams) returns (WeatherResponse) {}
}

message WeatherParams {
  repeated int32 MonthsNumbers = 1;
  repeated string Cities = 2;
  string Site = 3;
  repeated string Months = 4;
  string Year = 5;
}

message WeatherResponse {
  bytes ComparisonCSV = 1;
}
